--- a/angular-practice/style.css
+++ b/angular-practice/style.css
@@ -1,7 +1,13 @@
+body {
+    background-image: url('http://assets1.ignimgs.com/2014/09/18/star-wars-millennium-falcon-1280jpg-b9977d_1280w.jpg');
+}
+
 div {
     line-height: 3;
+/*
     border: 5px solid black;
     background-color: blue;
-    color: white;
+*/
+    color:darkturquoise;
     padding-left: 10px;
 }
