--- a/no-server-project/app/style.css
+++ b/no-server-project/app/style.css
@@ -1,34 +1,91 @@
 body {
     height: 100%;
     width: 100%;
-    background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRobBGPbAB8Yimq_zbt5OALcLCmRdMZ2wqLT2ofLnGVk2KqIBiG')
+    background-color: black;
 }
 
-.nav {
+.nav-top,
+.nav-bottom {
     position: relative;
-    width: 90%;
+    width: 100%;
     height: 50px;
     margin: 0px auto;
+    color: white;
 }
 
-.nav ul {
+.nav-top ul,
+.nav-bottom ul {
     float: right;
+    margin: 20px;
 }
 
-.nav ul li {
+.nav-top ul li,
+.nav-bottom ul li {
     list-style-type: none;
     display: inline;
     margin: 10px;
+    padding: 10px;
 }
 
-.nav ul li a {
+.nav-top ul li a,
+.nav-bottom ul li a {
     text-decoration: none;
+    color: white;
 }
 
-.routerView {
-    position: relative;
-    background-color: azure;
-    height: 700px;
-    width: 90%;
-    margin: 0px auto;
+.nav-top ul li a:visited,
+.nav-bottom ul li a:visited {
+    color: white;
+}
+
+.home-container {
+    height: 600px;
+    width: 100%;
+    background: url('https://static.pexels.com/photos/7070/space-desk-workspace-coworking.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.home-container div {
+    text-align: center;
+    padding-top: 150px;
+    color: white;
+}
+
+.portfolio-container {
+    height: 600px;
+    width: 100%;
+    background: url('https://static.pexels.com/photos/6494/sky-art-blocks.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.portfolio-container div {
+    text-align: center;
+    padding-top: 250px;
+    color: black;
+}
+
+.about-container {
+    height: 600px;
+    width: 100%;
+    background: url('https://static.pexels.com/photos/7464/pexels-photo.jpeg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.contact-container {
+    height: 600px;
+    width: 100%;
+    background: url('https://static.pexels.com/photos/6465/man-field-smartphone-yellow.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.contact-container div {
+    color: black;
 }
