--- a/no-server-project/app/style.css
+++ b/no-server-project/app/style.css
@@ -48,7 +48,7 @@ a {
     color: white;
 }
 
-a:visited{
+a:visited {
     color: white;
 }
 
@@ -59,7 +59,8 @@ a:visited{
     background: url('https://static.pexels.com/photos/7070/space-desk-workspace-coworking.jpg');
 }
 
-.home-bar {
+.home-bar,
+.contact-bar {
     height: 260px;
     width: 100%;
     position: absolute;
@@ -108,7 +109,8 @@ a:visited{
     background-size: cover;
 }
 
-.project-one, .project-two {
+.project-one,
+.project-two {
     height: 410px;
     width: 700px;
     position: relative;
@@ -137,14 +139,12 @@ a:visited{
     font-size: 20px;
 }
 
-.contact-container {
-    text-align: center;
-}
-
-.contact-header h1, .contact-header h4 {
+.contact-header h1,
+.contact-header h4 {
     color: white;
-    font-family: fantasy;
+    font-family: sans-serif;
     font-size: 58px;
+    text-align: center;
 }
 
 .contact-header h4 {
@@ -152,18 +152,55 @@ a:visited{
     margin-top: -30px;
 }
 
-.email-form {
-   padding-top: 10px; 
-}
-
-.username, .user-email, .email-subject, .email-compose {
+.username,
+.user-email,
+.email-subject,
+.email-compose,
+.submit-button {
     height: 30px;
     width: 60%;
-    margin: 5px;
-    border: 2px solid black;
+    margin: 5px 20%;
+    border: 2px solid white;
+    background: transparent;
+    color: white;
+    padding-left: 5px;
+}
+.email-compose {
+    padding-top: 10px;
+}
+
+::-webkit-input-placeholder {
+    color: white;
+    padding-left: 5px;
 }
 
 .email-compose {
     height: 300px;
-    margin-right: 10px;
 }
+
+.submit-button {
+    width: 20%;
+}
+
+.contact-bar {
+    width: 100%;
+    height: 700px;
+    margin: 0;
+    opacity: 0.3;
+    background-color: black;
+}
+
+.contact-header {
+    width: 100%;
+    z-index: 2;
+    position: absolute;
+    color: white;
+}
+
+.email-form {
+    width: 100%;
+    z-index: 3;
+    position: absolute;
+    margin-top: 180px;
+}
+
