--- a/no-server-project/app/style.css
+++ b/no-server-project/app/style.css
@@ -43,6 +43,10 @@ body {
     width: 40px;
 }
 
+.nav-top img {
+    margin-left: 30px;
+}
+
 a {
     text-decoration: none;
     color: white;
@@ -93,7 +97,7 @@ a:visited {
 }
 
 .capabilities-header {
-    background: url('https://static.pexels.com/photos/1018/mountains-nature-sunny-bridge.jpg');
+    background: url('https://static.pexels.com/photos/915/apple-camera-desk-office.jpg');
 }
 
 .contact-container {
@@ -119,6 +123,25 @@ a:visited {
 
 .capabilities-header {
     width: 100%;
+}
+
+.capabilities-bar {
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    background-color: black;
+    opacity: 0.7;
+    margin-top: 60px;
+}
+
+.capabilities-quote {
+    width: 100%;
+    position: absolute;
+    margin-top: 75px;
+    text-align: center;
+    font-size: 22px;
+    color: white;
+    font-family: cursive;
 }
 
 .capabilities-main {
