--- a/no-server-project/app/style.css
+++ b/no-server-project/app/style.css
@@ -127,19 +127,18 @@ a:visited {
 
 .capabilities-bar {
     width: 100%;
-    height: 60px;
+    height: 300px;
     position: absolute;
     background-color: black;
-    opacity: 0.7;
-    margin-top: 60px;
+    opacity: 0.3;
 }
 
 .capabilities-quote {
     width: 100%;
     position: absolute;
-    margin-top: 75px;
+    margin-top: 150px;
     text-align: center;
-    font-size: 22px;
+    font-size: 24px;
     color: white;
     font-family: cursive;
 }
@@ -227,5 +226,9 @@ a:visited {
     z-index: 3;
     position: absolute;
     margin-top: 160px;
+}
+
+.admin-email-list div {
+    border: 1px solid black;
 }
 
