--- a/ecommerce-part-one/public/style.css
+++ b/ecommerce-part-one/public/style.css
@@ -3,6 +3,6 @@
     border: 1px solid blue;
     margin: 10px auto;
     background-color: black;
-    color: white;
+    color: aliceblue;
     text-align: center;
 }
