--- a/ecommerce-part-one/public/views/home/homeTmpl.html
+++ b/ecommerce-part-one/public/views/home/homeTmpl.html
@@ -1,13 +1,5 @@
-<div class="wrapper">
+<div class="homeWrapper">
     
-    <div ng-repeat="product in products" class="productList">
-    Name: {{ product.name }}
-    <br>
-    Type: {{ product.classification }}
-    <br> 
-    Price: {{ product.price }}
-    <br>
-    </div>
-    
+    <main-directive ng-repeat="product in products"></main-directive>
     
 </div>
