--- a/ecommerce-part-one/public/views/admin/adminTmpl.html
+++ b/ecommerce-part-one/public/views/admin/adminTmpl.html
@@ -2,9 +2,9 @@
 
     <div ng-repeat="product in products">
         <div class="productList">
-            Name: {{ product.name }}
+            Name: {{ product.title }}
             <br> 
-            Type: {{ product.classification }}
+            Description: {{ product.description }}
             <br> 
             Price: {{ product.price }}
             <br>
